CHANGES
*******

0.5 (unreleased)
================

* ...

0.4.1 (2009-02-12)
==================

* Don't handle ``IObjectModified`` events for objects that do not yet
  have a parent. There is no need to do so anyway, as these objects cannot
  have outgoing relations indexed.

0.4 (2009-02-10)
================

* Introduce a ``RelationChoice`` field that behaves like
  ``schema.Choice`` but tracks relations. In combination with a source
  (such as created by ``RelationSourceFactory`` provided by
  ``z3c.relationfieldui``) this can be used to create drop-down
  selections for relations.

* Clarify the way comparing and sorting of ``RelationValue`` objects is 
  done in order to better support choice support.

0.3.2 (2009-01-21)
==================

* When a relation is broken, properly re-catalog things.

0.3.1 (2009-01-20)
==================

* Introduce sensible sort order for relations, based on a
  ``(from_attribute, from_path, to_path)`` tuple.

* Relations will now never compare to ``None``. 

0.3 (2009-01-19)
================

* Introduce two new interfaces: ``IHasOutgoingRelations`` and
  ``IHasIncomingRelations``. ``IHasOutgoingRelations`` should be provided
  by objects that actually have relations set on them, so that 
  they can be properly cataloged. ``IHasIncomingRelations`` should be
  set on objects that can be related to, so that broken relations
  can be properly tracked. ``IHasRelations`` now extends both,
  so if you provide those on your object you have an object that can
  have both outgoing as well as incoming relations.

* Improve broken relations support. When you now break a relation (by
  removing the relation target), ``to_id`` and ``to_object`` become
  ``None``. ``to_path`` however will remain the path that the relation
  last pointed to. ``TemporaryRelation`` objects that when realized
  are broken relations can also be created.

  You can also for broken status by calling ``isBroken`` on a
  relation.
